fix: cartPage slider overlapped with footer

--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -1,7 +1,6 @@
 .background {
   padding-top: 5rem;
   background-color: #f2f7f9;
-  height: 100vh;
   background-color: transparent;
   background-image: linear-gradient(#f2f7f9 7%, transparent 95%);
   opacity: 100%;
